Created generate PDF feature

--- a/ResumeBuilder/Pages/Index.cshtml
+++ b/ResumeBuilder/Pages/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="inputs text-center">
+    <form asp-action="GeneratePDF" asp-controller="Home" method="post">
     <div id="section1">
     <div class="photo section">
         <div class="mb-3">
@@ -15,37 +16,37 @@
     <div class="bacisPersonalInformation section">
         <p>Basic Personal Information</p>
         <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="Name" placeholder="John" oninput="updateCV('Name', this.value)">
+                <input type="text" class="form-control" id="Name" placeholder="John" name="Name" oninput="updateCV('Name', this.value)">
             <label for="Name">Name</label>
         </div>
         <div class="form-floating">
-                <input type="text" class="form-control" id="Surname" placeholder="Smith" oninput="updateCV('Surname', this.value)">
+                <input type="text" class="form-control" id="Surname" placeholder="Smith" name="Surname" oninput="updateCV('Surname', this.value)">
             <label for="Surname">Surname</label>
         </div>
         <div class="form-floating mb-3">
-                <input type="date" class="form-control" id="DateOfBirth" placeholder="01.01.2000" oninput="updateCV('DateOfBirth', this.value)">
+                <input type="date" class="form-control" id="DateOfBirth" placeholder="01.01.2000" name="DateOfBirth" oninput="updateCV('DateOfBirth', this.value)">
             <label for="DateOfBirth">Date of birth</label>
         </div>
     </div>
     <div class="placeOfResidence section">
         <p>Place of residence</p>
         <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="Country" placeholder="Poland" oninput="updateCV('Country', this.value)">
+                <input type="text" class="form-control" id="Country" placeholder="Poland" name="Country" oninput="updateCV('Country', this.value)">
             <label for="Country">Country</label>
         </div>
         <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="City" placeholder="Warsaw" oninput="updateCV('City', this.value)">
+                <input type="text" class="form-control" id="City" placeholder="Warsaw" name="City" oninput="updateCV('City', this.value)">
             <label for="City">City</label>
         </div>
     </div>
     <div class="contactInformation section">
         <p>Contact information</p>
         <div class="form-floating mb-3">
-                <input type="tel" class="form-control" id="phoneNumber" placeholder="123-456-789" oninput="updateCV('Phone', this.value)">
+                <input type="tel" class="form-control" id="phoneNumber" placeholder="123-456-789" name="Phone" oninput="updateCV('Phone', this.value)">
             <label for="phoneNumber">Phone number</label>
         </div>
         <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="email" placeholder="John@example.com" oninput="updateCV('Email', this.value)">
+                <input type="email" class="form-control" id="email" placeholder="John@example.com" name="Email" oninput="updateCV('Email', this.value)">
             <label for="email">Email adress</label>
         </div>
     </div>
@@ -55,33 +56,33 @@
         <div class="professionalExperience section">
             <p>Proffesional Experience</p>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="professionalExperience" placeholder="Worked as junior developer in microsoft since 2018" oninput="updateCV('ProfessionalExperience', this.value)">
+                <input type="text" class="form-control" id="professionalExperience" name="ProfessionalExperience" placeholder="Worked as junior developer in microsoft since 2018" oninput="updateCV('ProfessionalExperience', this.value)">
                 <label for="professionalExperience">Profesional Experience</label>
             </div>
         </div>
         <div class="education section">
             <p>Education</p>
             <div class="form-floating">
-                <input type="text" class="form-control" id="education" placeholder="Studied in NY, Bachelor of Science in Computer Science" oninput="updateCV('Education', this.value)">
+                <input type="text" class="form-control" id="education" name="Education" placeholder="Studied in NY, Bachelor of Science in Computer Science" oninput="updateCV('Education', this.value)">
                 <label for="education">Education</label>
             </div>
         </div>
         <div class="languages section">
             <p>Languages</p>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="languages" placeholder="English, C1" oninput="updateCV('Language', this.value)">
+                <input type="text" class="form-control" id="languages" name="Languages" placeholder="English, C1" oninput="updateCV('Language', this.value)">
                 <label for="languages">Languages</label>
             </div>
         </div>
         <div class="training section">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="training" placeholder="Microsoft, April 2021, Demonstrated proficiency in C# programming" oninput="updateCV('Training', this.value)">
+                <input type="text" class="form-control" id="training" name="Training" placeholder="Microsoft, April 2021, Demonstrated proficiency in C# programming" oninput="updateCV('Training', this.value)">
                 <label for="training">Training, Courses, Certifications</label>
             </div>
         </div>
         <div class="professionalProfile section">
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="professionalProfile" placeholder="Some words about you..." oninput="updateCV('Profile', this.value)">
+                <input type="text" class="form-control" id="professionalProfile" name="Profile" placeholder="Some words about you..." oninput="updateCV('Profile', this.value)">
                 <label for="professionalProfile">Professional Profile</label>
             </div>
         </div>
@@ -92,34 +93,35 @@
         <div class="skills section">
             <p>Skills</p>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="skills" placeholder="C#, ASP.Net, Git and so on!" oninput="updateCV('Skills', this.value)">
+                <input type="text" class="form-control" id="skills" placeholder="C#, ASP.Net, Git and so on!" name="Skills" oninput="updateCV('Skills', this.value)">
                 <label for="skills">Skills</label>
             </div>
         </div>
         <div class="interests section">
             <p>Interests</p>
             <div class="form-floating">
-                <input type="text" class="form-control" id="interests" placeholder="Coding, video games" oninput="updateCV('Interests', this.value)">
+                <input type="text" class="form-control" id="interests" placeholder="Coding, video games" name="Interests" oninput="updateCV('Interests', this.value)">
                 <label for="interests">Interests</label>
             </div>
         </div>
         <div class="links section">
             <p>Links</p>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="links" placeholder="https://www.example.com" oninput="updateCV('Links', this.value)">
+                <input type="text" class="form-control" id="links" placeholder="https://www.example.com" name="Links" oninput="updateCV('Links', this.value)">
                 <label for="links">Links</label>
             </div>
         </div>
         <div class="cpdp section">
             <p>Consent for Personal Data Processing</p>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="cpdp" placeholder="Write your Consent for Personal Data Processing here..." oninput="updateCV('Consent', this.value)">
+                <input type="text" class="form-control" id="cpdp" name="Consent" placeholder="Write your Consent for Personal Data Processing here..." oninput="updateCV('Consent', this.value)">
                 <label for="cpdp">Consent for Personal Data Processing</label>
             </div>
         </div>
         <button type="button" class="btn btn-primary" onclick="prev('section3')">Previous</button>
+        <button type="submit" class="btn btn-primary">Generate</button>
     </div>
-
+    </form>
     </div>
 </div>
 
