--- a/ResumeBuilder/Pages/Index.cshtml
+++ b/ResumeBuilder/Pages/Index.cshtml
@@ -66,7 +66,7 @@
                         <label for="professionalExperienceDate1">Date</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="professionalExperienceDescription1" name="ProfessionalExperience[0].Description" placeholder="Worked as junior developer in Microsoft since 2018" oninput="updateCV('ProfessionalExperience[0].Description', this.value)">
+                        <textarea type="text" class="form-control" id="professionalExperienceDescription1" name="ProfessionalExperience[0].Description" placeholder="Worked as junior developer in Microsoft since 2018" oninput="updateCV('ProfessionalExperience[0].Description', this.value)"></textarea>
                         <label for="professionalExperienceDescription1">Description</label>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                         <label for="educationDate1">Date</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="educationDescription1" name="Education[0].Description" placeholder="Details" oninput="updateCV('Education[0].Description', this.value)">
+                        <textarea type="text" class="form-control" id="educationDescription1" name="Education[0].Description" placeholder="Details" oninput="updateCV('Education[0].Description', this.value)"></textarea>
                         <label for="educationDescription1">Description</label>
                     </div>
                 </div>
